# nm-livesearch

./: Cargo.toml  README.md  notmuch-testconfig  todo.md
.github/workflows/: ci.yml  rust.yml
src/: highlight.rs  lib.rs  main.rs  message.rs  ordered.rs  runtime.rs  thread.rs  time.rs
