[package]
name = "nm-livesearch"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# notmuch = "*"
notmuch = { git = 'https://github.com/vhdirk/notmuch-rs' }
clap = { version = "3.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
xdg = "*"
home = "*"
chrono = "0.4.22"
regex = "1.6.0"
